@startuml
!theme plain
skinparam shadowing false
skinparam packageStyle rectangle

class AssessmentTest {
  test_id: UUID
  subject_code: str
  grade: int
  created_at: datetime
  version: int
}

class Question {
  question_id: UUID
  node_id: str
  text: str
  question_type: text|single_choice
  answer_key: str?
  correct_option_id: str?
  max_score: int
}

class QuestionOption {
  option_id: str
  text: str
  position: int
  diagnostic_tag: DiagnosticTag?
}

class TextDistractor {
  pattern: str
  match_mode: exact|normalized|regex
  diagnostic_tag: DiagnosticTag
}

class AssignmentAggregate {
  assignment_id: UUID
  test_id: UUID
  child_id: UUID
  status: AssignmentStatus
  assigned_at: datetime
  version: int
}

class AttemptAggregate {
  attempt_id: UUID
  assignment_id: UUID
  child_id: UUID
  status: AttemptStatus
  started_at: datetime
  submitted_at: datetime?
  score: int
  version: int
}

class Answer {
  question_id: UUID
  value: str?
  selected_option_id: str?
  resolved_diagnostic_tag: DiagnosticTag?
  is_correct: bool
  awarded_score: int
}

class Subject {
  code: str
  name: str
}

class Topic {
  code: str
  subject_code: str
  grade: int
  name: str
}

class MicroSkillNode {
  node_id: str
  subject_code: str
  grade: int
  topic_code: str?
  section_code: str
  section_name: str
  micro_skill_name: str
  predecessor_ids: list[str]
  criticality: low|medium|high
  source_ref: str?
  description: str?
  status: draft|active|archived
  external_ref: str?
  version: int
  created_at: datetime
  updated_at: datetime
}

AssessmentTest "1" o-- "1..*" Question
Question "1" o-- "0..*" QuestionOption
Question "1" o-- "0..*" TextDistractor
AssignmentAggregate "1" --> "1" AssessmentTest
AttemptAggregate "1" --> "1" AssignmentAggregate
AttemptAggregate "1" o-- "0..*" Answer
Topic "*" --> "1" Subject
Question "*" --> "1" MicroSkillNode
MicroSkillNode "*" --> "1" Topic
@enduml
